solr docker cors fix + build. Yay!

--- a/MusicFormats/pom.xml
+++ b/MusicFormats/pom.xml
@@ -15,6 +15,7 @@
         <jackson.version>2.15.1</jackson.version>
         <solr.version>9.5.0</solr.version>
         <lucene.version>9.9.2</lucene.version>
+        <jetty.version>10.0.19</jetty.version>
     </properties>
 
     <dependencies>
@@ -79,6 +80,7 @@
                                     <directory>src/main/resources</directory>
                                     <excludes>
                                         <exclude>**/compose.yml</exclude>
+                                        <exclude>**/*.Dockerfile</exclude>
                                     </excludes>
                                     <filtering>false</filtering>
                                 </resource>
@@ -86,6 +88,7 @@
                                     <directory>src/main/resources</directory>
                                     <includes>
                                         <include>**/compose.yml</include>
+                                        <include>**/*.Dockerfile</include>
                                     </includes>
                                     <filtering>true</filtering>
                                 </resource>
@@ -144,16 +147,50 @@
                 </executions>
             </plugin>
             <plugin>
-            <artifactId>maven-clean-plugin</artifactId>
-            <configuration>
-                <filesets>
-                    <fileset>
-                        <directory>${project.basedir}/docker</directory>
-                        <followSymlinks>false</followSymlinks>
-                    </fileset>
-                </filesets>
-            </configuration>
-        </plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.basedir}/docker</directory>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+            <!-- For copying jetty libs for cors fix in solr_cors docker image -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.6.1</version>
+                <executions>
+                    <execution>
+                        <id>copy</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.eclipse.jetty</groupId>
+                                    <artifactId>jetty-servlets</artifactId>
+                                    <version>${jetty.version}</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.basedir}/docker</outputDirectory>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.eclipse.jetty</groupId>
+                                    <artifactId>jetty-util</artifactId>
+                                    <version>${jetty.version}</version>
+                                    <type>jar</type>
+                                    <outputDirectory>${project.basedir}/docker</outputDirectory>
+                                </artifactItem>
+                            </artifactItems>
+                            <!-- other configurations here -->
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
