--- a/MusicFormats/src/main/resources/docker/compose.yml
+++ b/MusicFormats/src/main/resources/docker/compose.yml
@@ -2,19 +2,28 @@ version: '3'
 name: playin
 services:
   solr:
-    image: solr:@solr.version@
+    image: playin_solr:@solr.version@
+    build:
+      dockerfile: playin_solr.Dockerfile
     ports:
       - "8983:8983"
       - "8000:8000"
     volumes:
       - solr_home:/var/solr
-      #- ./lib:/var/solr/data/lib # this does not work on first startup, breaks permissions
-      - ./lib:/opt/solr-@solr.version@/lib # Seems to work but version needed. Solved with maven filters for now.
-      - ./conf:/conf
-    command:
-      - solr-precreate
-      - playin
-      - '/conf/playin'
+    environment:
+      # For debugging on port 8000
+      SOLR_OPTS: -agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n
+      # For verbose output of solr scripts
+      # VERBOSE: yes
+  solr_cors:
+    image: playin_solr_cors:@solr.version@
+    build:
+      dockerfile: playin_solr_cors.Dockerfile
+    ports:
+      - "8983:8983"
+      - "8000:8000"
+    volumes:
+      - solr_home:/var/solr
     environment:
       # For debugging on port 8000
       SOLR_OPTS: -agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n
