--- a/MusicFormats/pom.xml
+++ b/MusicFormats/pom.xml
@@ -13,9 +13,9 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jackson.version>2.15.1</jackson.version>
-        <solr.version>9.5.0</solr.version>
-        <lucene.version>9.9.2</lucene.version>
-        <jetty.version>10.0.19</jetty.version>
+        <solr.version>9.6.1</solr.version>
+        <lucene.version>9.10.0</lucene.version>
+        <jetty.version>10.0.20</jetty.version>
     </properties>
 
     <dependencies>
@@ -81,6 +81,7 @@
                                     <excludes>
                                         <exclude>**/compose.yml</exclude>
                                         <exclude>**/*.Dockerfile</exclude>
+                                        <exclude>**/solrconfig.xml</exclude>
                                     </excludes>
                                     <filtering>false</filtering>
                                 </resource>
@@ -89,6 +90,7 @@
                                     <includes>
                                         <include>**/compose.yml</include>
                                         <include>**/*.Dockerfile</include>
+                                        <include>**/solrconfig.xml</include>
                                     </includes>
                                     <filtering>true</filtering>
                                 </resource>
